# STM32

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  adts.ioc  build_run.sh  cppcheck_suppressions.txt  cwe120.c
.github/workflows/: protocol-sync-check.yml  static_analysis.yml
App/calib/: calib.c  calib.h
App/lidar/: lidar.c  lidar.h  lidar_parser.c  lidar_parser.h
App/motor/: motor.c  motor.h
App/uart_rpi/: uart_rpi.c  uart_rpi.h
Core/Inc/: main.h  stm32f4xx_hal_conf.h
Core/Src/: main.c  stm32f4xx_hal_msp.c
cmake/stm32cubemx/: CMakeLists.txt
host_ci/: CMakeLists.txt
host_ci/deamon/: cppcheck_suppressions.txt
host_ci/src/test2/: test_success_c.c
shared/: protocol.h
src/: test_c.c  test_cpp.cpp
src/test1/: add_push_main.c
tools/: cppcheck_suppressions.txt  misra_rules.txt  run_static_analysis.sh
